implement config for individual providers, enable sync for provider and target type registries